@@ -272,19 +272,20 @@ $cfgSources['localsql'] = array(
         'homeProvince' => 'object_homeprovince',
         'homePostalCode' => 'object_homepostalcode',
         'homeCountry' => 'object_homecountry',
-        // This is an example composite field for addresses, so you can display
-        // the various map links. If you use this, be sure to add 'homeAddress'
-        // to the 'tabs' parameter below.
-        // 'homeAddress' => array('fields' => array('homeStreet', 'homeCity',
-        //                                          'homeProvince',
-        //                                          'homePostalCode'),
-        //                        'format' => "%s \n %s, %s  %s"),
+        'homeAddress' => array('fields' => array('homeStreet', 'homeCity',
+                                                 'homeProvince',
+                                                 'homePostalCode'),
+                               'format' => "%s \n %s, %s  %s"),
         'workStreet' => 'object_workstreet',
         'workPOBox' => 'object_workpob',
         'workCity' => 'object_workcity',
         'workProvince' => 'object_workprovince',
         'workPostalCode' => 'object_workpostalcode',
         'workCountry' => 'object_workcountry',
+        'workAddress' => array('fields' => array('workStreet', 'workCity',
+                                                 'workProvince',
+                                                 'workPostalCode'),
+                               'format' => "%s \n %s, %s  %s"),
         'timezone' => 'object_tz',
         'email' => 'object_email',
         'homePhone' => 'object_homephone',
@@ -310,9 +311,9 @@ $cfgSources['localsql'] = array(
                                'birthday', 'photo'),
         _("Location") => array('homeStreet', 'homePOBox', 'homeCity',
                                'homeProvince', 'homePostalCode', 'homeCountry',
-                               'workStreet', 'workPOBox', 'workCity',
-                               'workProvince', 'workPostalCode', 'workCountry',
-                               'timezone'),
+                               'homeAdress', 'workStreet', 'workPOBox',
+                               'workCity', 'workProvince', 'workPostalCode',
+                               'workCountry', 'workAdress', 'timezone'),
         _("Communications") => array('email', 'homePhone', 'workPhone',
                                      'cellPhone', 'fax', 'pager'),
         _("Organization") => array('title', 'role', 'company', 'logo'),
@@ -640,6 +641,10 @@ if (!empty($GLOBALS['conf']['facebook']['id'])) {
             'homeProvince' => 'current_location.state',
             'homePostalCode' => 'current_location.zip',
             'homeCountry' => 'current_location.country',
+            'homeAddress' => array('fields' => array('homeCity',
+                                                     'homeProvince',
+                                                     'homePostalCode'),
+                                   'format' => "%s, %s  %s"),
         ),
         'search' => array(
             'name',
