@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Enable homeAdress and workAdress composite fields by default.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1178,7 +1178,7 @@
    <date>2011-05-03</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Enable homeAdress and workAdress composite fields by default.
    </notes>
   </release>
  </changelog>
