@@ -2,6 +2,7 @@
 v3.0.3-git
 ----------
 
+[jan] Enable homeAdress and workAdress composite fields by default.
 
 
 ------
